--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ body {
 }
 
 .tech-skills-container {
-  margin-left: 40px;
+  margin-left: 60px;
   margin-right: 40px;
   margin-top: 55px;
 }
@@ -101,7 +101,7 @@ body {
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
-  color: #ff6b08;
+  color: #4d4c4b;
   margin: 0;
 }
 
@@ -120,8 +120,8 @@ body {
 }
 
 .soft-skills-container {
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 60px;
+  margin-right: 40px;
   margin-top: 55px;
 }
 
@@ -129,7 +129,7 @@ body {
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
-  color: #ff6b08;
+  color: #4d4c4b;
   margin: 0;
 }
 
